--- a/templates/index.html
+++ b/templates/index.html
@@ -242,7 +242,7 @@
               <div class="modal-body text-center">
                 <div class="formbold-main-wrapper">
                   <div class="formbold-form-wrapper">
-                    <form autocomplete="off" id="newArticleForm" method="POST" action="http://127.0.0.1:8080/newarticle">
+                    <form autocomplete="off" id="newArticleForm" method="POST" action="https://utilssuporte.tn-russo.repl.co/newarticle">
                         <div class="formbold-input-flex">
                           <select id="categorySelect" class="form-select" aria-label="categorySelect">
                             <option selected>Selecione uma categoria</option>
